--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -38,7 +40,7 @@
     "dotenv": "^17.2.3",
     "i": "^0.3.7",
     "lucide-react": "^0.555.0",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "npm": "^11.6.4",
     "react": "19.2.0",
@@ -62,7 +64,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
     "prisma": "^6.19.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
